Changing the title to match my name

--- a/app/views/location.erb
+++ b/app/views/location.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Where is Danielle?</title>
+    <title>Where is Torres?</title>
     <style>
 html, body, iframe { height: 100%; margin: 0; padding: 0;}
 .wrapper {
